# com

jsoncpp/: CMakeLists.txt  build.cmd
jsoncpp/jsoncpp_jni/: Android.mk
jsoncpp/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
log4z/: CMakeLists.txt  log4z.cpp  log4z.h  log4z_android_ios_ext.cpp  log4z_android_ios_ext.h
log4z/log4z_jni/: Android.mk
mbedtls/: CMakeLists.txt  build.cmd
mbedtls/mbedtls_jni/: Android.mk
xyssl/: CMakeLists.txt  build.cmd
xyssl/xyssl_jni/: Android.mk
